--- a/index.html
+++ b/index.html
@@ -5,32 +5,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/style.css">
   
   <title>Frontend Mentor | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-
-  Perfume
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
+  <main>
+    <div class="c-product-card">
+      <div class="c-product-card__img-half">
+        <picture>
+          <!-- desktop image -->
+          <source srcset="images/image-product-desktop.jpg" media="(min-width: 64rem)">
+          <!-- mobile image --> 
+          <img src="images/image-product-mobile.jpg" alt="">
+        </picture>
+      </div>
+      <div class="c-product-card__text-half">
+        <hgroup>
+          <p class="c-product-card__ribbon ribbon-text">Perfume</p>
+          <h2 class="c-product-card__title"> Gabrielle Essence Eau De Parfum</h2>
+        </hgroup>
+        <p>        
+          A floral, solar and voluptuous interpretation    composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.        
+        </p>
+        <p class="c-product-card__prices">
+          <span>$149.99</span>
+          <!-- the strikethrough element to represent things that are no longer relevant or no longer accurate -->
+          <s>169.99</s>
+        </p>
+        <button type="button" class="c-product-card__btn">
+          <img src="images/icon-cart.svg" alt="">
+          <span>Add to Cart</span>
+        </button>
+      </div>
+    </div>
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer class="attribution">
+    <p>
+      <cite>
+        <a href="https://fedmentor.dev/posts/html-plan-product-preview/#series-intro" title="opens a new tab">How to plan your HTML (1): Product Preview Card</a>
+      </cite>
+      write by Grace Snow      
+    </p>
+    <p>
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" title="opens a new tab">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/kwokkw/product-preview-card-component-main" title="Github Repo">Kwok Wong</a>.
+  </p>
+  </footer>
 </body>
 </html>
