--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">  
   
   <title>Frontend Mentor | Product preview card component</title>
 </head>
@@ -16,7 +19,7 @@
       <div class="c-product-card__img-half">
         <picture>
           <!-- desktop image -->
-          <source srcset="images/image-product-desktop.jpg" media="(min-width: 64rem)">
+          <source srcset="images/image-product-desktop.jpg" media="(min-width: 48rem)">
           <!-- mobile image --> 
           <img src="images/image-product-mobile.jpg" alt="">
         </picture>
@@ -30,13 +33,12 @@
           A floral, solar and voluptuous interpretation    composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.        
         </p>
         <p class="c-product-card__prices">
-          <span>$149.99</span>
+          <span class="c-product-card__new-price">$149.99</span>
           <!-- the strikethrough element to represent things that are no longer relevant or no longer accurate -->
-          <s>169.99</s>
+          <s><span class="visually-hidden">Old price: </span>$169.99</s>
         </p>
         <button type="button" class="c-product-card__btn">
-          <img src="images/icon-cart.svg" alt="">
-          <span>Add to Cart</span>
+          Add to Cart
         </button>
       </div>
     </div>
@@ -45,14 +47,20 @@
   <footer class="attribution">
     <p>
       <cite>
-        <a href="https://fedmentor.dev/posts/html-plan-product-preview/#series-intro" title="opens a new tab">How to plan your HTML (1): Product Preview Card</a>
+        <a href="https://fedmentor.dev/posts/html-plan-product-preview/#series-intro" target="_blank" title="opens a new tab">How to plan your HTML (1): Product Preview Card</a>
       </cite>
-      write by Grace Snow      
+      <span class="wrap"> written by Grace Snow</span>            
+    </p>
+    <p>
+      <cite>
+        <a href="https://www.youtube.com/watch?v=B2WL6KkqhLQ&t=3079s" target="_blank" title="opens a new tab">Taking on a Frontend Mentor challenge | Responsive Product Preview Card Component</a>
+      </cite>
+      <span class="wrap"> by Kevin Powell</span>            
     </p>
     <p>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" title="opens a new tab">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/kwokkw/product-preview-card-component-main" title="Github Repo">Kwok Wong</a>.
-  </p>
+      Coded by <a href="https://github.com/kwokkw/product-preview-card-component-main" target="_blank" title="Github Repo">Kwok Wong</a>.
+    </p>
   </footer>
 </body>
 </html>
